--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "path": "^0.12.7",
+    "serve-favicon": "^2.5.0",
     "socket.io": "^4.1.2"
   }
 }
